--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -814,10 +814,10 @@ Les activités de plein air son.</p>
           <form action="{{ path('message_new') }}" method="post" role="form" class="php-email-form">
             <div class="row">
               <div class="col-md-6 form-group">
-                <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
+                <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" value={{app.user.username}}>
               </div>
               <div class="col-md-6 form-group mt-3 mt-md-0">
-                <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email">
+                <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" value={{app.user.email}}>
               </div>
             </div>
             <div class="form-group mt-3">
@@ -826,12 +826,7 @@ Les activités de plein air son.</p>
             <div class="form-group mt-3">
               <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
             </div>
-            <div class="my-3">
-               <div class="loading">Loading</div> 
-               <div class="error-message"></div> 
-              <div class="sent-message">Your message has been sent. Thank you!</div>
-            </div>
-            <div class="text-center"><button type="submit">Send Message</button></div>
+            <div class="text-center"><button type="submit">Envoyer message </button></div>
           </form>
         </div>
       </div>
@@ -923,7 +918,6 @@ Les activités de plein air son.</p>
   <script src="/assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="/assets/vendor/php-email-form/validate.js"></script>
 
    <!-- Jquery JS-->
     <script src="/assets/vendor/jquery-3.2.1.min.js"></script>
